整屏滚动增加分页器功能

--- a/RfullScroll.html
+++ b/RfullScroll.html
@@ -15,7 +15,13 @@
         <div class="Rsection">5</div>
         <div class="Rsection">6</div>
         
-        <!-- <div class="Rsection"></div> -->
+        <div id="Rpager">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div Rcurindex="1"></div>
+        </div>
     </div>
     <!-- <div class="Rpager"></div> -->
     <script src= "./js/jquery-3.4.1.min.js"></script>
